提交了树莓派上的测试用例

--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,13 @@
-/*/target/
-/*/logs/
-/*/bin/
-/*/META-INF/
-/*/.project
-/*/.classpath
-/*/.settings/
-/*/*.iml
-.idea
-*.DS_Store
-*.iws
-/out
+.idea/
 *.iml
+out/
+gen/
+idea-gitignore.jar
+resources/templates.list
+resources/gitignore/*
+build/
+build.properties
+junit*.properties
+IgnoreLexer.java~
+.gradle
+/*/*.iml
