提交从机的代码测试 提交DHT11的代码

--- a/family-device/pom.xml
+++ b/family-device/pom.xml
@@ -41,7 +41,7 @@
                     <archive>
                         <manifest>
                             <addClasspath>true</addClasspath>
-                            <mainClass>com.hjh.cn.example.ControlGpioExample</mainClass>
+                            <mainClass>com.hjh.cn.example.DHT11</mainClass>
                             <classpathPrefix>lib</classpathPrefix>
                             <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
                             <addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
