--- a/family-subordinate/pom.xml
+++ b/family-subordinate/pom.xml
@@ -9,9 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>family-web</artifactId>
-
-    <!-- Add typical dependencies for a web application -->
+    <artifactId>family-subordinate</artifactId>
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -20,41 +18,14 @@
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-jpa</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-rest</artifactId>
         </dependency>
-        <!--
-           mysql
-         https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
-        <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
-            <version>5.1.38</version>
-        </dependency>
-
-        <dependency>
-            <groupId>com.h2database</groupId>
-            <artifactId>h2</artifactId>
-        </dependency>
-
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
         <!--<dependency>-->
-            <!--<groupId>org.springframework.data</groupId>-->
-            <!--<artifactId>spring-data-rest-webmvc</artifactId>-->
-        <!--</dependency>-->
-        <dependency>
-            <groupId>familySpringBoot</groupId>
-            <artifactId>family-source</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
 
         <!--freemark-->
         <dependency>
@@ -89,6 +60,5 @@
             </plugin>
         </plugins>
     </build>
-
 
 </project>
