--- a/family-web/src/main/resources/application.properties
+++ b/family-web/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #≈‰÷√ ˝æ›ø‚
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/family
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/family?useUnicode=true&characterEncoding=UTF-8
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
