--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <module>family-web</module>
         <module>family-device</module>
         <module>family-source</module>
+        <module>family-subordinate</module>
     </modules>
 
     <parent>
