--- a/family-web/pom.xml
+++ b/family-web/pom.xml
@@ -62,10 +62,17 @@
             <artifactId>spring-boot-starter-freemarker</artifactId>
         </dependency>
 
+
+
         <dependency>
-            <groupId>familySpringBoot</groupId>
-            <artifactId>family-device</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.4</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpcore</artifactId>
+            <version>4.4</version>
         </dependency>
 
     </dependencies>
