--- a/family-web/src/main/resources/application.properties
+++ b/family-web/src/main/resources/application.properties
@@ -23,8 +23,19 @@ spring.freemarker.charset=utf-8
 #spring.freemarker.suffix=.ftl
 spring.freemarker.expose-request-attributes=true
 spring.freemarker.request-context-attribute=request
+spring.freemarker.expose-session-attributes=true
 #设定ftl文件路径
 spring.freemarker.template-loader-path=classpath:/templates
 #设定静态文件路径，js,css等
 spring.mvc.static-path-pattern=/static/**
-
+#默认支持文件上传
+spring.http.multipart.enabled=true
+#支持文件写入磁盘.
+#spring.http.multipart.file-size-threshold=0
+# 上传文件的临时目录
+#spring.http.multipart.location=
+# 最大支持文件大小
+spring.http.multipart.max-file-size=1Mb
+# 最大支持请求大小
+spring.http.multipart.max-request-size=10Mb
+ 
