--- a/family-web/pom.xml
+++ b/family-web/pom.xml
@@ -55,6 +55,11 @@
             <artifactId>family-source</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>familySpringBoot</groupId>
+            <artifactId>family-music</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
 
         <!--freemark-->
         <dependency>
